[package]
name = "postcard-heapless-compat"
version = "0.1.1"
edition = "2021"
description = "an adapter to use postcard with heapless >= 0.8"
license = "MIT OR Apache-2.0"
repository = "https://github.com/elrom/postcard-heapless-compat"

[dependencies.postcard]
version = "1.1.1"
default-features =  false
features = ["heapless"]

[dependencies.heapless]
version = "0.8.0"
default-features = false

[dependencies.serde]
version = "1.0.100"
default-features = false

